# postulator

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_conda.txt
input/: example_motivation_letter.txt  extended_resume.md
output/: motivation_letter.tex
src/postulator/: crew.py  main.py  utils.py
src/postulator/config/: agents.yaml  tasks.yaml
src/postulator/data_structures/: custom_data_structures.py
src/postulator/tools/: custom_tool.py
