[project]
name = "postulator"
version = "0.1.0"
description = "postulator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-generativeai>=0.1",
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
postulator = "postulator.main:run"
run_crew = "postulator.main:run"
train = "postulator.main:train"
replay = "postulator.main:replay"
test = "postulator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
